--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 History for Data::Validate::WithYAML::Plugin::IBAN
 ==================================================
 
+0.02 2013-10-24
+
+     * use PodWeaver
+
 0.01 2013-10-22
 
-     initial release
+     * initial release
