--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 History for Data::Validate::WithYAML::Plugin::IBAN
 ==================================================
 
+0.03 2015-03-01
+
+     * Update dist.ini
+     * Update Changes
+
 0.02 2013-10-24
 
      * use PodWeaver
